# docs/swagger.yaml
@@ -1,8 +1,97 @@
 basePath: /api/v1
 definitions:
+  crud.Pagination:
+    properties:
+      limit:
+        type: integer
+      offset:
+        type: integer
+    type: object
+  dto.ReadPeopleDTO:
+    properties:
+      address:
+        example: г. Москва, ул. Ленина, д. 5, кв. 1
+        type: string
+      createdAt:
+        example: "2020-01-01T00:00:00Z"
+        type: string
+      name:
+        example: Иван
+        type: string
+      passportNumber:
+        example: 567890
+        type: integer
+      passportSerie:
+        example: 1234
+        type: integer
+      patronymic:
+        example: Иванович
+        type: string
+      surname:
+        example: Иванов
+        type: string
+      updatedAt:
+        description: IsDeleted      bool               `json:"is_deleted" example:"false"`
+        example: "2020-01-01T00:00:00Z"
+        type: string
+      uuid:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+    type: object
   peopleSchemas.RequestCreatePeople:
     properties:
       passportNumber:
+        type: string
+    type: object
+  peopleSchemas.RequestUpdatePeople:
+    properties:
+      address:
+        example: г. Москва, ул. Ленина, д. 5, кв. 1
+        type: string
+      name:
+        example: Иван
+        type: string
+      passportNumber:
+        example: 567890
+        type: integer
+      passportSerie:
+        example: 1234
+        type: integer
+      patronymic:
+        example: Иванович
+        type: string
+      surname:
+        example: Иванов
+        type: string
+    type: object
+  peopleSchemas.RespPeople:
+    properties:
+      address:
+        example: г. Москва, ул. Ленина, д. 5, кв. 1
+        type: string
+      created_at:
+        example: "2020-01-01T00:00:00Z"
+        type: string
+      name:
+        example: Иван
+        type: string
+      passportNumber:
+        example: 567890
+        type: integer
+      passportSerie:
+        example: 1234
+        type: integer
+      patronymic:
+        example: Иванович
+        type: string
+      surname:
+        example: Иванов
+        type: string
+      updated_at:
+        example: "2020-01-01T00:00:00Z"
+        type: string
+      uuid:
+        example: 550e8400-e29b-41d4-a716-446655440000
         type: string
     type: object
   schemas.BaseResp:
@@ -11,6 +100,43 @@ definitions:
       error: {}
       message:
         type: string
+    type: object
+  schemas.ResponseUUID:
+    properties:
+      uuid:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+    type: object
+  v1.IResponseBase-peopleSchemas_RespPeople:
+    properties:
+      data:
+        $ref: '#/definitions/peopleSchemas.RespPeople'
+      message:
+        type: string
+    type: object
+  v1.IResponseBase-schemas_ResponseUUID:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.ResponseUUID'
+      message:
+        type: string
+    type: object
+  v1.IResponseBaseErr:
+    properties:
+      error: {}
+      message:
+        type: string
+    type: object
+  v1.IResponseBaseMulti-dto_ReadPeopleDTO:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.ReadPeopleDTO'
+        type: array
+      message:
+        type: string
+      next_pagination:
+        $ref: '#/definitions/crud.Pagination'
     type: object
 externalDocs:
   description: OpenAPI
@@ -23,10 +149,10 @@ info:
     url: http://www.swagger.io/support
   description: This is my server.
   license:
-    name: Apache 2.0
+    name: Apache helicopter
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  title: UwU
   version: "1.0"
 paths:
   /people:
@@ -34,17 +160,57 @@ paths:
       consumes:
       - application/json
       description: List Peoples by filter
+      parameters:
+      - example: г. Москва, ул. Ленина, д. 5, кв. 1
+        in: query
+        name: address
+        type: string
+      - example: Иван
+        in: query
+        name: name
+        type: string
+      - example: 567890
+        in: query
+        name: passportNumber
+        type: integer
+      - example: 1234
+        in: query
+        name: passportSerie
+        type: integer
+      - example: Иванович
+        in: query
+        name: patronymic
+        type: string
+      - example: Иванов
+        in: query
+        name: surname
+        type: string
+      - example: 550e8400-e29b-41d4-a716-446655440000
+        format: uuid
+        in: query
+        name: uuid
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseMulti-dto_ReadPeopleDTO'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.IResponseBaseErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
       summary: List Peoples by filter
       tags:
       - People API
@@ -65,15 +231,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBase-schemas_ResponseUUID'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
       summary: Create people
       tags:
       - People API
@@ -94,15 +260,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBase-schemas_ResponseUUID'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
       summary: Delete people
       tags:
       - People API
@@ -123,15 +289,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBase-peopleSchemas_RespPeople'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
       summary: Find People by uuid
       tags:
       - People API
@@ -140,6 +306,12 @@ paths:
       - application/json
       description: Update people
       parameters:
+      - description: People base
+        in: body
+        name: UpdatePeople
+        required: true
+        schema:
+          $ref: '#/definitions/peopleSchemas.RequestUpdatePeople'
       - description: People UUID
         format: uuid
         in: path
@@ -151,15 +323,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBase-peopleSchemas_RespPeople'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBaseErr'
       summary: Update people
       tags:
       - People API
@@ -216,7 +388,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.BaseResp'
+            $ref: '#/definitions/v1.IResponseBase-schemas_ResponseUUID'
         "404":
           description: Not Found
           schema:
@@ -320,10 +492,4 @@ paths:
       summary: Stop task by uuid
       tags:
       - Task API
-securityDefinitions:
-  ApiKeyAuth:
-    description: Used for
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
